Update dependencies. Fix some contrast issues. Improve colors. Fix issues with match score width.

--- a/src/client/features/Dashboard/Dashboard.styles.scss
+++ b/src/client/features/Dashboard/Dashboard.styles.scss
@@ -1,5 +1,5 @@
 .fixture {
-  padding: 20px 16px 16px;
+  padding: 16px;
 
   &:nth-child(2n-1) {
     background-color: #f4f5f7;
