--- a/src/client/features/Dashboard/components/Fixture/Fixture.styles.scss
+++ b/src/client/features/Dashboard/components/Fixture/Fixture.styles.scss
@@ -1,4 +1,5 @@
 .container {
+  padding-top: 20px;
 }
 
 .matchup {
@@ -13,10 +14,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 44px;
+  width: 60px;
 
   color: rgba(0, 0, 0, 0.67);
-  font-size: 0.8rem;
+  font-weight: 600;
 }
 
 .information {
