--- a/src/client/global.scss
+++ b/src/client/global.scss
@@ -22,7 +22,7 @@
   --horse-primary-darker: #306f33;
   --horse-primary-text: #fff;
 
-  --horse-secondary: #de3333;
+  --horse-secondary: #e6474d;
   --horse-secondary-text: #fff;
 
   --horse-tertiary-light: #fde67b61;
